--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "express": "^4.18.2",
     "express-openid-connect": "^2.10.0",
     "hbs": "^4.2.0",
+    "http-errors": "^2.0.0",
+    "materialize-css": "^1.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0"
