--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-openid-connect": "^2.10.0",
     "hbs": "^4.2.0",
+    "materialize-css": "^1.0.0-rc.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
