--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "promise": "^8.3.0",
     "sequelize": "^6.26.0",
     "sqlite3": "^5.1.2"
   },
