--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "promise": "^8.3.0",
+    "railway": "^2.0.17",
     "sequelize": "^6.26.0",
     "sqlite3": "^5.1.2"
   },
