--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "@types/morgan": "^1.9.4",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "diagnostics_channel": "^1.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-openid-connect": "^2.12.0",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "html2canvas": "^1.4.1",
     "materialize-css": "^1.0.0",
