--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "dependencies": {
     "@types/morgan": "^1.9.4",
     "amplify": "^0.0.11",
+    "aws-sdk": "^2.1433.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "diagnostics_channel": "^1.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-openid-connect": "^2.12.0",
@@ -18,6 +19,7 @@
     "materialize-css": "^1.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "promise": "^8.3.0",
